# rustactixsqlxsimplecrud

./: Cargo.toml  README.md
migrations/: 20240920020801_init.down.sql  20240920020801_init.up.sql
src/: handler.rs  main.rs  model.rs  schema.rs
